--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Прайс-лист «Бородинский»</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Барбершоп «Бородинский»</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+      </head>
 <body>
   <header class="main-header">
     <div class="container header-container">
@@ -111,21 +113,35 @@
           </div>
       </div>
   </footer>
-  <div class="login-form popup">
-    <form action="index.html">
-      <h3 class="txt-caption">ЛИЧНЫЙ КАБИНЕТ</h3>
-      <p>Введите пожалуйста свой логин и пароль</p>
-      <input type="text" placeholder="Логин">
-      <input type="password" placeholder="Пароль">
-      <div class="login-save">
-        <label><input type="checkbox"> ЗАПОМНИТЕ МЕНЯ</label>
-        <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
-      </div>
-      <button class="btn btn-box" type="submit">ВОЙТИ</button>
-    </form>
+  <div class="bg-popup">
+      <div class="login-form popup">
+          <form action="index.html">
+            <h3 class="txt-caption">ЛИЧНЫЙ КАБИНЕТ</h3>
+            <p>Введите пожалуйста свой логин и пароль</p>
+            <input type="text" placeholder="Логин">
+            <input type="password" placeholder="Пароль">
+            <div class="login-save">
+              <input id="save-me" type="checkbox">
+              <label for="save-me"><span class="form-chbx"></span> ЗАПОМНИТЕ МЕНЯ</label>
+              <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
+            </div>
+            <button class="btn btn-box" type="submit">ВОЙТИ</button>
+            <button class="close" type="button">Закрыть</button>
+          </form>
+        </div>
   </div>
   <div class="map popup">
     <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="765" height="560" frameborder="0"></iframe>
   </div>
+  <script>
+    $(document).ready(function(){
+      $(".close").click(function(){
+        $(".bg-popup").css("display","none");
+      })
+      $(".user-block").click(function(){
+        $(".bg-popup").css("display","block");
+      })
+    });
+  </script>
 </body>
 </html>
