--- a/tehnomart/catalog.html
+++ b/tehnomart/catalog.html
@@ -6,8 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Техномарт</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
+
 
 <body>
   <header class="main-header">
@@ -41,8 +46,8 @@
         </div>
         <div class="user-block">
           <div class="user-name">
-            <a href="#" class="btn btn-user" type="button">Равшан Джамшутович</button>
-              <button class="btn btn-signout" type="submit"></button>
+            <a href="#" class="btn btn-user">Равшан Джамшутович</a>
+            <button class="btn-signout" type="submit"></button>
           </div>
           <div class="user-orders">
             <a href="#">Мои заказы</a>
@@ -50,6 +55,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     <div class="header-bottom">
       <div class="container">
@@ -83,8 +89,8 @@
   </header>
   <main>
     <div class="container">
-      <div class="breadcrumbs">
-        <ul>
+      <div>
+        <ul class="breadcrumbs">
           <li class="home">
             <a href="index.html"></a>
           </li>
@@ -107,11 +113,29 @@
           <span>Фильтр:</span>
           <form action="catalog.html">
             <fieldset class="price-filter">
-              <legend>Цена</legend>
-              <input type="range" name="f-price">
-              <span>0</span>
-              <span>300</span>
+              <legend>Цена:</legend>
+              <div class="range-filter">
+
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar"></div>
+                  </div>
+                  <div class="toggle toggle-min"></div>
+                  <div class="toggle toggle-max"></div>
+                </div>
+
+                <div class="price-controls">
+                  <label class="min-price">
+                    <input name="min-price" type="text" value="0">
+                  </label>
+                  <label class="max-price">
+                    <input name="max-price" type="text" value="30000">
+                  </label>
+                </div>
+
+              </div>
             </fieldset>
+            <div class="hr"></div>
             <fieldset class="f-brands">
               <legend>Производители:</legend>
               <label>
@@ -125,6 +149,7 @@
               <label>
                 <input type="checkbox" name="Hitachi" value="Hitachi">Hitachi</label>
             </fieldset>
+            <div class="hr"></div>
             <fieldset class="f-battery">
               <legend>Питание:</legend>
               <label>
@@ -159,7 +184,7 @@
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
               <p class="old-price">22500 Р.</p>
-              <p class="price">15500 Р.</p>
+              <p class="btn price">15500 Р.</p>
             </div>
             <div class="product-item">
               <a href="#">
@@ -173,7 +198,7 @@
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
               <p class="old-price">30500 Р.</p>
-              <p class="price">25500 Р.</p>
+              <p class="btn price">25500 Р.</p>
             </div>
             <div class="product-item">
               <a href="#">
@@ -186,7 +211,7 @@
                 <a class="btn btn-shop" href="#">Купить</a>
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
-              <p class="price">25500 Р.</p>
+              <p class="btn price">25500 Р.</p>
               <span class="new">new</span>
             </div>
             <div class="product-item">
@@ -201,7 +226,7 @@
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
               <p class="old-price">22500 Р.</p>
-              <p class="price">15500 Р.</p>
+              <p class="btn price">15500 Р.</p>
             </div>
             <div class="product-item">
               <a href="#">
@@ -215,7 +240,7 @@
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
               <p class="old-price">30500 Р.</p>
-              <p class="price">25500 Р.</p>
+              <p class="btn price">25500 Р.</p>
               <span class="new">new</span>
             </div>
             <div class="product-item">
@@ -229,7 +254,7 @@
                 <a class="btn btn-shop" href="#">Купить</a>
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
-              <p class="price">25500 Р.</p>
+              <p class="btn price">25500 Р.</p>
             </div>
             <div class="product-item">
               <a href="#">
@@ -243,7 +268,7 @@
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
               <p class="old-price">22500 Р.</p>
-              <p class="price">15500 Р.</p>
+              <p class="btn price">15500 Р.</p>
               <span class="new">new</span>
             </div>
             <div class="product-item">
@@ -258,7 +283,7 @@
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
               <p class="old-price">30500 Р.</p>
-              <p class="price">25500 Р.</p>
+              <p class="btn price">25500 Р.</p>
             </div>
             <div class="product-item">
               <a href="#">
@@ -271,7 +296,7 @@
                 <a class="btn btn-shop" href="#">Купить</a>
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
-              <p class="price">25500 Р.</p>
+              <p class="btn price">25500 Р.</p>
             </div>
           </div>
           <nav class="pagination">
@@ -372,7 +397,7 @@
         </div>
         <div class="footer-developer">
           <p>Разработано-:</p>
-          <a class="btn" href="https://htmlacademy.ru">htmlacademy.ru</a>
+          <a class="" href="https://htmlacademy.ru">htmlacademy.ru</a>
         </div>
 
       </div>
@@ -380,23 +405,43 @@
   </footer>
   <div class="popup map">
   </div>
-  <div class="feadback poupup">
-    <form action="index.html">
-      <div class="label-group">
-        <label>Ваше имя
-          <input type="text" placeholder="Представьтесь, пожалуйста">
-        </label>
-        <label>Ваш e-mail:
-          <input type="email" placeholder="Для отправки ответа">
-        </label>
-      </div>
-      <label>
-        Текст письма:
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-      </label>
-      <button class="btn" type="submit">ОТПРАВИТЬ</button>
-    </form>
+  <div class="bg-popup">
+    <div class="feadback poupup">
+      <form action="index.html">
+        <div class="input-block">
+          <div class="label-block">
+            <div class="label-group">
+              <label>Ваше имя</label>
+              <input type="text" placeholder="Представьтесь, пожалуйста">
+            </div>
+            <div class="label-group">
+              <label>Ваш e-mail:</label>
+              <input type="email" placeholder="Для отправки ответа">
+            </div>
+          </div>
+          <label>
+            Текст письма:
+          </label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </div>
+
+        <div class="btn-bottom">
+          <button class="btn" type="submit">ОТПРАВИТЬ</button>
+        </div>
+        <button class="close" type="button">Закрыть</button>
+      </form>
+    </div>
   </div>
+  <script>
+    $(document).ready(function () {
+      $(".close").click(function () {
+        $(".bg-popup").css("display", "none");
+      })
+      $(".user-block").click(function () {
+        $(".bg-popup").css("display", "block");
+      })
+    });
+  </script>
 </body>
 
 </html>
