--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -7,7 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Техномарт</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 
 <body>
@@ -80,7 +83,7 @@
         <div class="properties-top">
           <div class="properties-item item-1">
             <a href="#">
-              <div class="features-name">Материала</div>
+              <div class="features-name">Материалы</div>
               <div class="btn btn-prop">На любой вкус</div>
               <span class="new">new</span>
             </a>
@@ -101,39 +104,41 @@
         <div class="properties-bottom">
           <div class="slider">
             <div class="slide-list">
-              <div class="slide-item">
+              <input id="slide-1" type="radio" checked name="slider">
+              <input id="slide-2" type="radio" name="slider">
+              <div class="slide-item" id="slide-item-1">
                 <img src="img/slide-1.jpg" width="620" height="266" alt="Префораторы">
                 <div class="slide-caption">Префораторы</div>
                 <p>Настоящие мужские игрушки</p>
                 <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
               </div>
-              <div class="slide-item">
+              <div class="slide-item" id="slide-item-2">
                 <img src="img/slide-2.jpg" width="620" height="266" alt="Дрели ">
                 <div class="slide-caption">Дрели </div>
                 <p>Соседям на радость!</p>
                 <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
               </div>
+              <div class="slide-radio">
+                <label for="slide-1" class="btn-radio btn-radio-1"></label>
+                <label for="slide-2" class="btn-radio btn-radio-2"></label>
+              </div>
             </div>
             <div class="slide-control">
-              <div class="prev"></div>
-              <div class="next"></div>
-            </div>
-            <div class="slide-state">
-              <input type="radio" name="slider">
-              <input type="radio" name="slider">
+              <label for="slide-1" class="prev"></label>
+              <label for="slide-2" class="next"></label>
             </div>
           </div>
           <div class="properties-list">
             <div class="properties-item item-4">
               <a href="#">
-                <div class="features-name">Материалы</div>
-                <div class="btn btn-prop" href="">На любой вкус</div>
+                <div class="features-name">Скидки 50%</div>
+                <div class="btn btn-prop" href="">На 350 товаров</div>
               </a>
             </div>
             <div class="properties-item item-5">
               <a href="#">
-                <div class="features-name">Инструмент</div>
-                <a class="btn" href="">На все случаи</a>
+                <div class="features-name">Доставка</div>
+                <div class="btn btn-prop" href="">бесплатно</div>
               </a>
             </div>
           </div>
@@ -146,38 +151,60 @@
         </div>
         <div class="popular-product">
           <div class="product-item">
-            <figure>
-              <img src="img/pop-product-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
-            </figure>
-            <span class="product-name">Перфоратор BOSCH BFG 9000</span>
+            <a href="#">
+              <figure>
+                <img src="img/pop-product-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+              </figure>
+              <span class="product-name">Перфоратор BOSCH BFG 9000</span>
+            </a>
             <p class="old-price">32500 Р.</p>
-            <p class="price">25500 Р.</p>
+            <p class="btn btn-price">25500 Р.</p>
+            <div class="product-hover">
+              <a class="btn btn-shop" href="#">Купить</a>
+              <button class="btn btn-mark" type="button">В закладки</button>
+            </div>
           </div>
           <div class="product-item">
-            <figure>
-              <img src="img/pop-product-2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-            </figure>
-            <span class="product-name">Перфоратор BOSCH BFG 3000</span>
-            <!-- сделай этот блок как на барбершопе -->
+            <a href="#">
+              <figure>
+                <img src="img/pop-product-2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+              </figure>
+              <span class="product-name">Перфоратор BOSCH BFG 3000</span>
+            </a>
             <p class="old-price">22500 Р.</p>
-            <p class="price">15500 Р.</p>
-            <!-- прайсы добавь в родителя -->
+            <p class="btn btn-price">15500 Р.</p>
+            <div class="product-hover">
+              <a class="btn btn-shop" href="#">Купить</a>
+              <button class="btn btn-mark" type="button">В закладки</button>
+            </div>
           </div>
           <div class="product-item">
-            <figure>
-              <img src="img/pop-product-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
-            </figure>
-            <span class="product-name">Перфоратор BOSCH BFG 6000</span>
+            <a href="#">
+              <figure>
+                <img src="img/pop-product-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
+              </figure>
+              <span class="product-name">Перфоратор BOSCH BFG 6000</span>
+            </a>
             <p class="old-price">30500 Р.</p>
-            <p class="price">25500 Р.</p>
+            <p class="btn btn-price">25500 Р.</p>
+            <div class="product-hover">
+              <a class="btn btn-shop" href="#">Купить</a>
+              <button class="btn btn-mark" type="button">В закладки</button>
+            </div>
           </div>
           <div class="product-item">
-            <figure>
-              <img src="img/pop-product-4.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-            </figure>
-            <span class="product-name">Перфоратор BOSCH BFG 2000</span>
+            <a href="#">
+              <figure>
+                <img src="img/pop-product-4.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+              </figure>
+              <span class="product-name">Перфоратор BOSCH BFG 2000</span>
+            </a>
+            <p class="btn btn-price">12500 Р.</p>
+            <div class="product-hover">
+              <a class="btn btn-shop" href="#">Купить</a>
+              <button class="btn btn-mark" type="button">В закладки</button>
+            </div>
             <span class="new">new</span>
-            <p class="price">12500 Р.</p>
           </div>
         </div>
       </section>
@@ -229,76 +256,87 @@
           </a>
         </div>
       </section>
-      <section class="service">
+    </div>
+    <section class="service">
+      <div class="container">
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!
           <br> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="tabs">
+          <input type="radio" checked name="service" id="service-1">
+          <input type="radio" name="service" id="service-2">
+          <input type="radio" name="service" id="service-3">
           <ul class="tabs-nav tabs-service">
             <li>
-              <a class="active" href="#tab-1">Доставка</a>
+              <label for="service-1">Доставка</label>
             </li>
             <li>
-              <a href="#tab-2">Гарантия</a>
+              <label for="service-2">Гарантия</label>
             </li>
             <li>
-              <a href="#tab-3">Кредит</a>
+              <label for="service-3">Кредит</label>
             </li>
           </ul>
           <div class="tab-container sevice-list">
-            <div class="service-item delivery" id="tab-1">
-              <h3>Доставка</h3>
-              <p>
-                Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая
-                его на ваш этаж!
-              </p>
+            <div class="service-item" id="tab-1">
+              <div class="delivery">
+                <h3>Доставка</h3>
+                <p>
+                  Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая
+                  его на ваш этаж!
+                </p>
+              </div>
             </div>
-            <div class="service-item guarantee" id="tab-2">
-              <h3>Гарантия</h3>
-              <p>
-                Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда
-                можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь
-                сами.
-              </p>
+            <div class="service-item" id="tab-2">
+              <div class="guarante">
+                <h3>Гарантия</h3>
+                <p>
+                  Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда
+                  можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь
+                  сами.
+                </p>
+              </div>
             </div>
-            <div class="service-item credit" id="tab-3">
-              <h3>Кредит</h3>
-              <p>
-                Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
-              </p>
-              <a href="#" class="btn">отправить заявку</a>
+            <div class="service-item" id="tab-3">
+              <div class="credit">
+                <h3>Кредит</h3>
+                <p>
+                  Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+                </p>
+                <a href="#" class="btn">отправить заявку</a>
+              </div>
             </div>
           </div>
         </div>
-      </section>
-      <section class="information">
-        <div class="about-us">
-          <h3>Компания «Техномарт»</h3>
-          <p> Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными
-            любителей сэкномить на гастарбайтерах.
-          </p>
-          <p>
-            Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
-          </p>
-          <ul class="list-service">
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
-          </ul>
-          <a href="#" class="btn">Подробнее о компании</a>
+      </div>
+    </section>
+    <section class="information container">
+      <div class="about-us">
+        <h2>Компания «Техномарт»</h2>
+        <p> Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными
+          любителей сэкномить на гастарбайтерах.
+        </p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul class="list-service">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#" class="btn">Подробнее о компании</a>
+      </div>
+      <div class="contact">
+        <h3>Контакты</h3>
+        <p>Вы можете забрать товар сами,
+          <br> заехав в наш офис:
+        </p>
+        <div class="map">
+          <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="300" height="158" frameborder="0"></iframe>
         </div>
-        <div class="contact">
-          <h3>Контакты</h3>
-          <p>Вы можете забрать товар сами,
-            <br> заехав в наш офис:
-          </p>
-          <div class="map">
-            <a href="#"></a>
-          </div>
-          <a href="#" class="btn">Заблудились? Напишите нам!</a>
-        </div>
-      </section>
-    </div>
+        <a href="#" class="btn">Заблудились? Напишите нам!</a>
+      </div>
+    </section>
 
   </main>
   <footer class="main-footer">
@@ -333,8 +371,8 @@
               </li>
             </ul>
           </nav>
-          <nav>
-            <ul class="nav-footer-2">
+          <nav class="nav-footer-2">
+            <ul>
               <li>
                 <a href="#">Материалы</a>
               </li>
@@ -368,8 +406,8 @@
           <a href="mailto:mail@htmlacademy.ru"> mail@htmlacademy.ru</a>
         </div>
         <div class="footer-developer">
-          <p>Разработано-:</p>
-          <a class="btn" href="https://htmlacademy.ru">htmlacademy.ru</a>
+          <p>Разработано-</p>
+          <a class="" href="https://htmlacademy.ru">htmlacademy.ru</a>
         </div>
 
       </div>
@@ -377,23 +415,42 @@
   </footer>
   <div class="popup map">
   </div>
-  <div class="feadback poupup">
-    <form action="index.html">
-      <div class="label-group">
-        <label>Ваше имя
-          <input type="text" placeholder="Представьтесь, пожалуйста">
-        </label>
-        <label>Ваш e-mail:
-          <input type="email" placeholder="Для отправки ответа">
-        </label>
-      </div>
-      <label>
-        Текст письма:
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-      </label>
-      <button class="btn" type="submit">ОТПРАВИТЬ</button>
-    </form>
+  <div class="bg-popup">
+      <div class="feadback poupup">
+          <form action="index.html">
+            <div class="input-block">
+                <div class="label-block">
+                    <div class="label-group">
+                        <label>Ваше имя</label>
+                        <input type="text" placeholder="Представьтесь, пожалуйста">
+                    </div>
+                    <div class="label-group">
+                        <label>Ваш e-mail:</label>
+                        <input type="email" placeholder="Для отправки ответа">
+                    </div>
+                  </div>
+                  <label>
+                    Текст письма:
+                  </label>
+                  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            </div>
+           
+            <div class="btn-bottom">
+                <button class="btn" type="submit">ОТПРАВИТЬ</button>
+            </div>
+            <button class="close" type="button">Закрыть</button>
+          </form>
+        </div>
   </div>
+  <script>
+      $(document).ready(function(){
+        $(".close").click(function(){
+          $(".bg-popup").css("display","none");
+        })
+        $(".user-block").click(function(){
+          $(".bg-popup").css("display","block");
+        })
+      });
+    </script>
 </body>
-
 </html>
